--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<h3>What is the capital of India?</h3>
+		<form action="">
+			<input type="radio" name="state" value="New Delhi">
+			<label for="">New Delhi</label> <br>
+			<input type="radio" name="state" value="Mubmbai">
+			<label for="">Mumbai</label> 
+		</form>
+		<blockquote class="text">New Delhi is the caoital of India and an administrative district of NCT Delhi.</blockquote>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
