--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
 			<input type="radio" name="state" value="Mubmbai">
 			<label for="">Mumbai</label> 
 		</form>
-		<blockquote class="text">New Delhi is the caoital of India and an administrative district of NCT Delhi.</blockquote>
+		<blockquote class="text" cite="https://en.wikipedia.org/wiki/New_Delhi">New Delhi is the capital of India and an administrative district of NCT Delhi.</blockquote>
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
